<resources xmlns:tools="http://schemas.android.com/tools">
    <item name="menu_settings" type="id" />
    <!-- Strings related to login -->
    <item name="menu_stories" type="id" />
    <item name="menu_create" type="id" />
    <item name="menu_profile" type="id" />
    <item name="menu_signoff" type="id" />
    <string name="app_name">One-Picture Narrative</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_stories">Stories</string>
    <string name="menu_creation">Creation</string>

    <!-- Preference Titles -->
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <!-- Messages Preferences -->
    <string name="menu_signoff">Sign off</string>
    <string name="home_second">Home Second</string>

    <!-- Sync Preferences -->
    <string name="title_activity_settings">Settings</string>
    <string name="app_header">App</string>
    <string name="account_header">Account</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <!-- Strings used for fragments for navigation -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previewtext">Rain in a Garden; is a detective story about a botanist that meet his tragic end.</string>
    <string name="previewimage">previewImage</string>
    <string name="previewtitle">Rain in a Garden</string>
    <string name="previewinfo">Posted on 20.05.2020 - by User001</string>
    <string name="previewtext2">The story of fred and his fascination with astronomy.</string>
    <string name="previewimage2">previewImage</string>
    <string name="previewtitle2">Starhunting</string>
    <string name="previewinfo2">Posted on 20.05.2020 - by User002</string>
    <string name="previewinfo3">Posted on 20.05.2020</string>
    <string name="favoritenum">10</string>
    <string name="user001">User001</string>
    <string name="profile" tools:ignore="DuplicateDefinition">Profile</string>
    <string name="myface">myFace</string>
    <string name="male_18">Male, 18</string>
    <string name="my_stories_narratives">My Stories/Narratives</string>
    <string name="share">share</string>
    <string name="create_your_story_narrative">Create your Story/Narrative</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="biometric_authentication">Biometric authentication</string>
    <string name="settings">Settings</string>
    <string name="profile" tools:ignore="DuplicateDefinition">Profile</string>
</resources>
