<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stories"
            android:checked="true"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_stories" />
        <item
            android:id="@+id/nav_creation"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_creation" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_signoff"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/menu_signoff" />
    </group>
</menu>
