<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/settingsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/menu_settings" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="?android:attr/listDivider" />

            <Switch
                android:id="@+id/darkMode"
                style="@style/Theme.AppCompat.DayNight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/dark_mode" />

            <Switch
                android:id="@+id/biometricAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/biometric_authentication" />
        </LinearLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>